# BASIC-RAG-TO-AGENTIC-AI

./: .env  README.md  pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jasonparsing.ipynb  6-databaseparsing.ipynb
0-DataIngestParsing/.ipynb_checkpoints/: 3-dataparsingdoc-checkpoint.ipynb
0-DataIngestParsing/data/databases/: company.db
0-DataIngestParsing/data/text_files/: machine_learning.txt
1-VectoreEmbeddingAndDatabases/: embedding.ipynb  openaiembeddings.ipynb
2-Vectore Stores/: 1-chromadb.ipynb  2-fiass.ipynb  3-Othervectorstores.ipynb  4-PineConeVectorDB.ipynb  5-Datastaxdb.ipynb
2-Vectore Stores/chroma_db/: chroma.sqlite3
2-Vectore Stores/fiass_index/: index.pkl
3-AdvancedChunking/: 1-semanticchunking.ipynb  langchain_intro.txt
4-Hybrid Search Strategies/: 1-denseparse.ipynb  2-reranking.ipynb  3-mmr.ipynb
5-Query Enhancement/: 1-queryexpansion.ipynb  2-querydecomposition.ipynb  3-HyDE.ipynb
5-Query Enhancement/output/langchain/: chroma.sqlite3
5-Query Enhancement/output/steve_jobs/: chroma.sqlite3
6-Multimodal/: 1-multimodalopenai.ipynb
